Bug 457809 - On Wayland, nothing happens when I right-click on 'Show desktop' widget and choose 'Minimize all windows'
Summary: On Wayland, nothing happens when I right-click on 'Show desktop' widget and c...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Show Desktop/Minimize All widgets (other bugs)
Version First Reported In: 5.25.4
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2022-08-12 18:40 UTC by Patrick Silva
Modified: 2022-09-15 03:17 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments
screenshot of the context menu of 'Show desktop' widget (17.76 KB, image/png)
2022-08-12 18:40 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2022-08-12 18:40:58 UTC
Created attachment 151289 [details]
screenshot of the context menu of 'Show desktop' widget

STEPS TO REPRODUCE
1. add 'Show desktop' widget to Plasma panel
2. open some window
3. right-click on 'Show desktop' widget added to Plasma panel and choose 'Minimize all windows'

OBSERVED RESULT
nothing happens

EXPECTED RESULT
'Minimize all windows' option should do what it says or be removed.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.4
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.5
Graphics Platform: Wayland
Comment 1 Nate Graham 2022-08-12 19:39:16 UTC
Can confirm.

I'd recommend removing it as you can just swap the whole widget with the "Minimize all" widget.
Comment 2 Fushan Wen 2022-08-13 17:06:41 UTC
Can't reproduce. I can minimize all windows by clicking the menu item when the applet is Peek Desktop.
Comment 3 Patrick Silva 2022-08-13 19:16:44 UTC
Tested again on Wayland and X11. The bug only occurs on Wayland.
Comment 4 ratijas 2022-09-02 07:33:35 UTC
So, first of all, there are both actions in context menu in both forms of this applet. This isn't supposed to happen: it should only show an action of its alternative mode.

Secondly, those actions don't always work. "Minimize All Windows" minimizes them on X11, and does not work on Wayland. But even on X11 it won't restore them back when activated second time.

However, swapping applet to the "Minimize All Windows" form, it works as normal, i.e. clicking on the applet — not on a menu item.
Comment 5 ratijas 2022-09-02 11:35:11 UTC
Git commit b30904b12b49eae44767ba93f441aa6de1edc413 by ivan tkachenko.
Committed on 02/09/2022 at 09:31.
Pushed by ratijas into branch 'master'.

[applets/showdesktop] Fix "Minimize All" context action on Wayland

Let's reuse the one from MinimizeAllController that "just works".

This change means that applet will be tracking minimized clients
regardless of its primary role (Minimize / Peek). This needs some
follow up changes to represent such state explicitly. But also it makes
"Minimize All Windows" action menu affect the "active" state of the
 applet when it has "Minimize..." role, which is kind of an improvement.

M  +1    -1    applets/showdesktop/package/contents/ui/main.qml
M  +0    -8    applets/showdesktop/plugin/showdesktop.cpp
M  +0    -1    applets/showdesktop/plugin/showdesktop.h

https://invent.kde.org/plasma/plasma-desktop/commit/b30904b12b49eae44767ba93f441aa6de1edc413
Comment 6 ratijas 2022-09-02 11:56:44 UTC
Accidentally committed to the master branch. Quickly reverted, and now waiting for a proper review at https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/1122
Comment 7 ratijas 2022-09-15 03:00:23 UTC
Git commit cbb707fea12a32ec17a9cd960febc4914020e39c by ivan tkachenko.
Committed on 15/09/2022 at 01:35.
Pushed by ngraham into branch 'master'.

[applets/showdesktop] Fix "Minimize All" context action on Wayland

Let's reuse the one from MinimizeAllController that "just works".

This change means that applet will be tracking minimized clients
regardless of its primary role (Minimize / Peek). This needs some
follow up changes to represent such state explicitly. But also it makes
"Minimize All Windows" action menu affect the "active" state of the
 applet when it has "Minimize..." role, which is kind of an improvement.

M  +1    -1    applets/showdesktop/package/contents/ui/main.qml
M  +0    -8    applets/showdesktop/plugin/showdesktop.cpp
M  +0    -1    applets/showdesktop/plugin/showdesktop.h

https://invent.kde.org/plasma/plasma-desktop/commit/cbb707fea12a32ec17a9cd960febc4914020e39c