[applets/showdesktop] Fix "Minimize All" context action on Wayland

Let's reuse the one from MinimizeAllController that "just works".

This change means that applet will be tracking minimized clients
regardless of its primary role (Minimize / Peek). This needs some
follow up changes to represent such state explicitly. But also it makes
"Minimize All Windows" action menu affect the "active" state of the
 applet when it has "Minimize..." role, which is kind of an improvement.

BUG: 457809